<resources>
    <string name="terminal">Terminal</string>
    <string name="scan_pay">Scan Payment</string>
    <string name="setting">SETTINGS</string>
    <string name="mone">Bill Payment</string>
    <string name="settlement">SETTLEMENT</string>
    <string name="sale1">SALE</string>
    <string name="voids">VOID</string>
    <string name="chip1">CHIP</string>
    <string name="wave1">WAVE</string>
    <string name="manual_sale_completed">Manual Sale Completion</string>
    <string name="sales_completion">Sale Completion</string>
    <string name="pre_authorization_sale">Pre-Authorization Sale</string>
    <string name="manual_pre_authorization_sale">Manual Pre-Authorization Sale</string>
    <string name="pre_auth">PREAUTH</string>
    <string name="refund">REFUND</string>
    <string name="currency">RM</string>
    <string name="amountN">Amount</string>
    <string name="cardNum">Card Number</string>
    <string name="appN">APP</string>
    <string name="E_date">Expiry Date</string>
    <string name="Response_n">Response</string>
    <string name="DoubleDot">:</string>
    <string name="enter_the_amount">SALE AMOUNT</string>
    <string name="sale_amount">RM 0.00</string>
    <string name="total_amount">TOTAL AMOUNT</string>
    <string name="enter_the_preauth_amount">PREAUTH AMOUNT</string>
    <string name="enter_the_pin">Enter the Pin Number</string>
    <string name="coherent">Coherent</string>
    <string name="amount">0.00</string>
    <string name="amount_currency">AMOUNT:RM</string>
    <string name="card_name">Card Number:</string>
    <string name="pin_name">Pin Number</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_00">00</string>
    <string name="btn_dot">.</string>
    <string name="btn_ok">OK</string>
    <string name="TID">TID: </string>
    <string name="MID">MID: </string>
    <string name="CardNo">CARD NO: </string>
    <string name="APP">APP: </string>
    <string name="ExpDate">Expiry Date: </string>
    <string name="ADI">AID: </string>
    <string name="REF">REF NO: </string>
    <string name="APPR">APPR CODE: </string>
    <string name="RESP">RESP CODE: </string>
    <string name="Batch">BATCH NO: </string>
    <string name="Trace">TRACE NO: </string>
    <string name="Date">DATE/TIME: </string>
    <string name="TypeZakat">TYPE/YEAR: </string>
    <string name="Invoice">INVOICE NO: </string>
    <string name="EntryMode">ENTRY: </string>
    <string name="tc">TC NO: </string>
    <string name="AppC">AC: </string>
    <string name="TVR">TVR: </string>
    <string name="msgRe">I AGREE TO PAY THE ABOVE TOTAL AMOUNT ACCORDING TO THE CARD ISSUER AGREEMENT</string>
    <string name="CusCP">***** CUSTOMER COPY *****</string>
    <string name="DupCP">***** DUPLICATE COPY *****</string>
    <string name="MerCP">***** MERCHANT COPY *****</string>
    <string name="PSE">00A404000E315041592E5359532E444446303100</string>
    <string name="PPSE">00A404000E325041592E5359532E444446303100</string>
    <string name="Card">MAGNETIC STRIPE CARD</string>
    <string name="Response">Response:</string>
    <string name="void_sale">Void Sale</string>
    <string name="enter_your_password">Enter your Password:</string>
    <string name="enter_card_expire_date">Enter Card Expire Date (YYMM)</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="select_type_of_void">Select Type of Void</string>
    <string name="enter_invoice_number">Enter Invoice Number\n</string>
    <string name="enter_invoice_number2">Enter Invoice Number</string>
    <string name="enter_invoice_number1">Enter Invoice Number / Transaction ID (without T)</string>
    <string name="enter_invoice_number3">Enter Invoice Number / Transaction ID \n</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update">Update</string>
    <string name="ok">OK</string>
    <string name="textView">TextView</string>
    <string name="_0">0</string>
    <string name="enter_the_time_hhmmss">Enter the time (HHMMSS)</string>
    <string name="enter_the_date_mmdd">Enter the date (MMDD)</string>
    <string name="enter_retrieval_reference_number_ref">Enter Retrieval Reference Number (REF)</string>
    <string name="enter_approval_code">Enter Approval Code</string>
    <string name="_00">00</string>
    <string name="todo">TODO</string>
    <string name="enter_the_changes">Enter the changes</string>
    <string name="reversal">Send Reversal</string>
    <string name="print_iso_msg">Print Iso Msg</string>
    <string name="database_clear">Clear Database</string>
    <string name="print">Print</string>
    <string name="sign_on">Sign On</string>
    <string name="admin">Admin</string>
    <string name="track_2_encryption">Data Encryption</string>
    <string name="tms">TMS Receipt</string>
    <string name="parameter">Parameters</string>
    <string name="settlements_report">Last Settlement</string>
    <string name="add_table">Add Table</string>
    <string name="edit_table">Edit Table</string>
    <string name="print_copy">Customer Copy</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="edit_parameter">Edit Parameter</string>
    <string name="last_iso_message">Last Iso Message</string>
    <string name="print_last_transaction_receipt">Print Last Receipt</string>
    <string name="view_transaction">"Transaction Summary"</string>
    <string name="e_view_transaction">E-Wallet Transaction Summary</string>
    <string name="sale_visibility">Sale</string>
    <string name="settle_visibility">Settlement </string>
    <string name="void_visibility">Void</string>
    <string name="refund_visibility">Refund</string>
    <string name="pre_auth_visibility">Pre-Authorization</string>
    <string name="setting_visibility">Setting</string>
    <string name="auto_settlement">Auto Settlement</string>
    <string name="enter_the_stn">Enter the System Trace Number(STN)</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="other_transaction">Other Transaction</string>
    <string name="about">About</string>
    <string name="transaction_view">Transaction View</string>
    <string name="etransaction_view">E-Wallet Transaction View</string>
    <string name="type_tv">TYPE</string>
    <string name="card_no_tv">CARD NO</string>
    <string name="amount_tv">AMOUNT</string>
    <string name="approval_code_tv">APPR. CODE</string>
    <string name="ewallet_type_tv">E-WALLET</string>
    <string name="Trace_1">TRACE NO</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="transaction_viewer">Transaction Viewer</string>
    <string name="no_pin_please_click_ok">No PIN, Please Click OK</string>
    <string name="select_the_aid">Select the AID</string>
    <string name="send_settlement">Send</string>
    <string name="back">Back</string>
    <string name="send_offline">Send Offline</string>
    <string name="send_tms">Send TMS Receipt</string>
    <string name="hop_in">Hop In</string>
    <string name="debug_message">Debug Message</string>
    <string name="user_input">Cardholder Confirmation</string>
    <string name="vendor_option">Developer Option</string>
    <string name="set_merchant">Set Merchant</string>
    <string name="set_first_ip_address">PRIMARY IP ADDRESS</string>
    <string name="set_first_port">PRIMARY\nPORT</string>
    <string name="set_second_ip_address">SECONDARY IP ADDRESS</string>
    <string name="set_second_port">SECONDARY PORT</string>
    <string name="set_tms_address">TMS RECEIPT ADDRESS</string>
    <string name="set_timeout_time">TRANSACTION\nTIMEOUT</string>
    <string name="set_merchant_name">MERCHANT\nNAME</string>
    <string name="set_merchant_address">MERCHANT ADDRESS</string>
    <string name="set_mid">MID</string>
    <string name="set_mid_mccs">MID MCCS</string>
    <string name="set_tid">TID</string>
    <string name="set_tid_mccs">TID MCCS</string>
    <string name="set_nii">NII</string>
    <string name="set_nii_mccs">NII MCCS</string>
    <string name="auto_settlement_time">Auto-Settlement Time</string>
    <string name="set_card_searching_timeout">Card\nSearching\nTimeout</string>
    <string name="enter_merchant_name">Enter Merchant Name</string>
    <string name="enter_merchant_add">Enter Merchant Address</string>
    <string name="enter_scheme_tid">Enter Scheme TID</string>
    <string name="enter_scheme_mid">Enter Scheme MID</string>
    <string name="enter_scheme_nii">Enter Scheme NII</string>
    <string name="enter_mccs_tid">Enter MCCS TID</string>
    <string name="enter_mccs_mid">Enter MCCS MID</string>
    <string name="enter_mccs_nii">Enter MCCS NII</string>
    <string name="enter_scheme_tpdu">Enter Scheme TPDU</string>
    <string name="enter_mccs_tpdu">Enter MCCS TPDU</string>
    <string name="enter_port">Enter Port</string>
    <string name="enter_ip">Enter IP Address</string>
    <string name="enter_1st_ip">Enter Primary IP Address</string>
    <string name="enter_1st_url">Enter Primary URL</string>
    <string name="enter_1st_port">Enter  Primary  Port</string>
    <string name="enter_2nd_ip">Enter Secondary IP Address</string>
    <string name="enter_2nd_port">Enter Secondary Port</string>
    <string name="enter_2nd_url">Enter Secondary URL</string>
    <string name="enter_tms_url">Enter TMS Receipt URL</string>
    <string name="enter_timeout_time">Enter Timeout Duration(s)</string>
    <string name="enter_close_time">Enter AutoClose Duration(s)</string>
    <string name="enter_the_time">Enter Time(HHMMSS)</string>
    <string name="enter_the_location">Enter Device Location</string>
    <string name="enter_the_lane">Enter Device Lane</string>
    <string name="change_password">Change Password</string>
    <string name="current">Current :</string>
    <string name="new_1">New :</string>
    <string name="retype_new">Retype New :</string>
    <string name="setting_password">Void Password</string>
    <string name="admin_password">Admin Password</string>
    <string name="system_password">Exit Password</string>
    <string name="select_type_of_password">Select type of Password :</string>
    <string name="transfer_file">Transfer File</string>
    <string name="unattended_machine">Unattended Mode</string>
    <string name="attend_machine">Attended Mode</string>
    <string name="zakat_harta">ZAKAT HARTA</string>
    <string name="wakaf">WAKAF</string>
    <string name="derma">DERMA</string>
    <string name="force_pin">Force Pin</string>
    <string name="sale_complete_online">Online Sale Completion</string>
    <string name="index">Index :</string>
    <string name="set_mccs_tpdu">TPDU MCCS</string>
    <string name="set_tpdu">TPDU</string>
    <string name="zakat_fitrah">ZAKAT FITRAH</string>
    <string name="zakat_pendapatan">ZAKAT PENDAPATAN</string>
    <string name="zakat_perniagaan">ZAKAT PERNIAGAAN</string>
    <string name="zakat_wang_simpanan">ZAKAT WANG SIMPANAN</string>
    <string name="zakat_emas">ZAKAT EMAS</string>
    <string name="zakat_perak">ZAKAT PERAK</string>
    <string name="host_url">Host URL</string>
    <string name="enable_gkash">Enable GKash</string>
    <string name="enable_ipay">Enable IPay88</string>
    <string name="enable_waz2pay">Enable Waz2PayEWallet</string>
    <string name="crash_recovery_title">Terminal Restarting</string>
    <string name="crash_recovery_message">The application stopped unexpectedly.\nIt is restarting automatically.</string>
    <string name="crash_recovery_tap">Tap anywhere to restart now</string>
</resources>