<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:weightSum="4"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/button_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_1"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

                <Button
                    android:id="@+id/button_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_2"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

                <Button
                    android:id="@+id/button_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_3"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/button_4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_4"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

                <Button
                    android:id="@+id/button_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_5"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

                <Button
                    android:id="@+id/button_6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_6"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/button_7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_7"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

                <Button
                    android:id="@+id/button_8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_8"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

                <Button
                    android:id="@+id/button_9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_9"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    tools:ignore="ButtonStyle"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/button_00"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_00"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_0"
                    android:textSize="36sp"
                    android:textStyle="normal"
                    android:background="@drawable/keypad_only_number_border"
                    android:textColor="@color/colorBlackText"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_delete_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/keypad_only_delete_border"
                    android:textColor="@color/colorBlackText"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>